--- a/index.html
+++ b/index.html
@@ -15,10 +15,29 @@
             <path fill="none" d="M15 8l14.729 14.382L15 35.367" />
           </svg>
         </span>
-        <span class="logo__text">hello friend</span>
+        <span class="logo__text"></span>
         <span class="logo__cursor"></span>
       </a>
     </header>
+ body {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      min-height: 100vh;
+      margin: 0;
+      font-family: Arial, sans-serif;
+    }
+    .container {
+      width: 100%;
+      max-width: 800px;
+      padding: 20px;
+      box-sizing: border-box;
+    }
+    /* Kitas jūsų stilius */
+    /* ... */
+  </style>
+</head>
 
     <div class="content">
       <div class="posts">
